--- a/dfs/04_1_dfs.rst
+++ b/dfs/04_1_dfs.rst
@@ -71,7 +71,7 @@
 общей идеи, что имхо стоит максимально расширять условия в if’ах. В
 данном случае потом может оказаться, что, зайдя в вершину, в was мы
 сохраним что-нибудь ещё, не обязательно единицу (например, номер
-компоненты связности, или “<состояние”> вершины в том или ином смысле) —
+компоненты связности, или «состояние» вершины в том или ином смысле) —
 но в любом случае ноль будет обозначать непосещённую вершину, а не-ноль
 — посещённую, поэтому :math:`was[i]<>0` будет всегда работать.
 
@@ -184,7 +184,7 @@ r3cm |image|
 ^^^^^^^^^^^^^^^^^^^^^^^
 
 У каждой вершины, кроме той, из которой был произведён начальный запуск
-поиска (“<корня”>), можно выделить “<родителя”> — вершину, из которой мы
+поиска («корня»), можно выделить «родителя» — вершину, из которой мы
 перешли в данную вершину. Соединив каждую вершину (кроме корня, конечно)
 с её родителем, получим подграф исходного графа — *дерево поиска в
 глубину*.
@@ -205,13 +205,13 @@ r3cm |image|
     простого из пришедших мне сейчас в голову доказательств. Пронумеруем все
     вершины в том порядке, в котором мы их находили. В дереве поиска в
     глубину из каждой вершины :math:`u` выходим несколько (ноль или больше)
-    рёбер в её “<сыновья”> — вершины, которые мы нашли из :math:`u`, значит,
-    их номера больше, чем у :math:`u`, — а также ровно одно ребро в
-    “<предка”> — вершину, *из* которой мы нашли :math:`u` (такие ребра есть
-    у всех вершин, кроме корня) — номер этой вершины меньше, чем у
-    :math:`u`. Пусть есть цикл. Рассмотрим в нем вершину с наибольшим
-    номером. В неё входят *два* ребра, принадлежащие этому циклу, и потому
-    идущие и вершин с *меньшими* номерами, чем у нашей. Противоречие.
+    рёбер в её «сыновья» — вершины, которые мы нашли из :math:`u`, значит,
+    их номера больше, чем у :math:`u`, — а также ровно одно ребро в «предка»
+    — вершину, *из* которой мы нашли :math:`u` (такие ребра есть у всех
+    вершин, кроме корня) — номер этой вершины меньше, чем у :math:`u`. Пусть
+    есть цикл. Рассмотрим в нем вершину с наибольшим номером. В неё входят
+    *два* ребра, принадлежащие этому циклу, и потому идущие и вершин с
+    *меньшими* номерами, чем у нашей. Противоречие.
     
     В случае связного графа это всегда будет остовное дерево графа, т.е.
     покрывающее все вершины. Но в случае несвязного графа это будет или
@@ -268,11 +268,11 @@ r3cm |image|
 позволяющим перебрать соседей вершины за
 :math:`O(\mbox{\it количество этих соседей})` (например, списком рёбер,
 отсортированным по первой вершине, или вообще не хранить граф, а
-вычислять соседние вершины “<на лету”>, как, например, в различных
-задачах типа хождения коня по шахматному полю — там мы, конечно, не
-будем хранить ребра вообще, а будем просто перебирать все клетки, на
-которые можно попасть с текущей). Тогда суммарное время работы всех
-таких переборов будет
+вычислять соседние вершины «на лету», как, например, в различных задачах
+типа хождения коня по шахматному полю — там мы, конечно, не будем
+хранить ребра вообще, а будем просто перебирать все клетки, на которые
+можно попасть с текущей). Тогда суммарное время работы всех таких
+переборов будет
 :math:`O(\mbox{\it суммарное количество соседей всех вершин})`, т.е.
 :math:`O(E)`, а общее время оставшейся работы будет :math:`O(V)`, т.е.
 общее время работы алгоритма будет :math:`O(V+E)`. В большинстве случаев
