Basic work with references

--- a/dfs/04_1_dfs.rst
+++ b/dfs/04_1_dfs.rst
@@ -75,6 +75,12 @@
 но в любом случае ноль будет обозначать непосещённую вершину, а не-ноль
 — посещённую, поэтому :math:`was[i]<>0` будет всегда работать.
 
+
+
+.. _howtocall:
+
+
+
 Как вызывать процедуру :math:`find`
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
@@ -196,32 +202,37 @@ r3cm |image|
     Докажите, что действительно получится дерево. Точнее,
     докажите, что в полученном подграфе не будет циклов. Верно ли, что это
     всегда будет дерево, покрывающее все вершины исходного графа? Как это
-    зависит от того, как мы вызываем поиск в глубину (п. [howtocall])? На
-    самом деле доказательство не очень тривиально.
+    зависит от того, как мы вызываем поиск в глубину (п.
+    :ref:`howtocall`)? На самом деле доказательство не очень
+    тривиально.
     |
     |
-    То, что не будет
-    циклов, видимо, можно доказывать многими способами. Приведу идею самого
-    простого из пришедших мне сейчас в голову доказательств. Пронумеруем все
-    вершины в том порядке, в котором мы их находили. В дереве поиска в
-    глубину из каждой вершины :math:`u` выходим несколько (ноль или больше)
-    рёбер в её «сыновья» — вершины, которые мы нашли из :math:`u`, значит,
-    их номера больше, чем у :math:`u`, — а также ровно одно ребро в «предка»
-    — вершину, *из* которой мы нашли :math:`u` (такие ребра есть у всех
-    вершин, кроме корня) — номер этой вершины меньше, чем у :math:`u`. Пусть
-    есть цикл. Рассмотрим в нем вершину с наибольшим номером. В неё входят
-    *два* ребра, принадлежащие этому циклу, и потому идущие и вершин с
-    *меньшими* номерами, чем у нашей. Противоречие.
+    То, что не будет циклов, видимо, можно доказывать
+    многими способами. Приведу идею самого простого из пришедших мне сейчас
+    в голову доказательств. Пронумеруем все вершины в том порядке, в котором
+    мы их находили. В дереве поиска в глубину из каждой вершины :math:`u`
+    выходим несколько (ноль или больше) рёбер в её «сыновья» — вершины,
+    которые мы нашли из :math:`u`, значит, их номера больше, чем у
+    :math:`u`, — а также ровно одно ребро в «предка» — вершину, *из* которой
+    мы нашли :math:`u` (такие ребра есть у всех вершин, кроме корня) — номер
+    этой вершины меньше, чем у :math:`u`. Пусть есть цикл. Рассмотрим в нем
+    вершину с наибольшим номером. В неё входят *два* ребра, принадлежащие
+    этому циклу, и потому идущие и вершин с *меньшими* номерами, чем у
+    нашей. Противоречие.
     
     В случае связного графа это всегда будет остовное дерево графа, т.е.
     покрывающее все вершины. Но в случае несвязного графа это будет или
     остовное дерево одной компоненты связности — если запускаем просто
     :math:`find(i)`, — или остовный лес, покрывающий все вершины — если
-    запускаем вторым из перечисленных в п. [howtocall] способом.
+    запускаем вторым из перечисленных в п. :ref:`howtocall` способом.
     
     |
 
-[provetree]
+
+
+.. _provetree:
+
+
 
 r3cm |image|
 
