Convert ulist to itemize

--- a/backtrack/01_4_add.rst
+++ b/backtrack/01_4_add.rst
@@ -11,27 +11,27 @@
 результата всеми силами, в надежде, что, может быть, повезёт и получится
 что-то лучше. А именно:
 
-В задачах на оптимизацию (т.е. когда надо найти объект с оптимальными
-параметрами) можно, когда вы видите, что время подходит к концу, просто
-вывести лучший найденный на данный момент объект и завершить работу.
-Если повезёт и он на самом деле будет оптимальным, то тест будет зачтён,
-иначе хуже, чем TL, все равно не будет.
+-  В задачах на оптимизацию (т.е. когда надо найти объект с оптимальными
+   параметрами) можно, когда вы видите, что время подходит к концу,
+   просто вывести лучший найденный на данный момент объект и завершить
+   работу. Если повезёт и он на самом деле будет оптимальным, то тест
+   будет зачтён, иначе хуже, чем TL, все равно не будет.
 
-В задачах на поиск объекта ничего не остаётся, как вывести, что решения
-не существует (естественно, ваша программа должна также завершаться
-сразу, как только нашла решение). Кстати, это далеко не всегда бывает
-неправильно, даже наоборот: в хорошем наборе тестов обязательно должны
-быть большие тесты с ответом «решения не существует». Если же вам
-требовалось (редкий случай) вывести *все* решения, то ничего не
-остаётся, как их все найденные на данный момент и вывести, и завершить
-работу (про вывод *всех* решений см. ниже).
+-  В задачах на поиск объекта ничего не остаётся, как вывести, что
+   решения не существует (естественно, ваша программа должна также
+   завершаться сразу, как только нашла решение). Кстати, это далеко не
+   всегда бывает неправильно, даже наоборот: в хорошем наборе тестов
+   обязательно должны быть большие тесты с ответом «решения не
+   существует». Если же вам требовалось (редкий случай) вывести *все*
+   решения, то ничего не остаётся, как их все найденные на данный момент
+   и вывести, и завершить работу (про вывод *всех* решений см. ниже).
 
-В задачах на подсчёт числа объектов ничего не остаётся, как вывести,
-сколько вы уже насчитали. Конечно, скорее всего это будет неправильно
-(ваша программа работала секунду, насчитала, допустим 1432 объекта, и
-хочет работать ещё секунду… неужто она не найдёт ни одного объекта
-больше? :) а если найдёт, то, значит, :math:`1432` — неверный ответ), но
-работать больше нельзя и ничего лучше тут, видимо, не придумаешь.
+-  В задачах на подсчёт числа объектов ничего не остаётся, как вывести,
+   сколько вы уже насчитали. Конечно, скорее всего это будет неправильно
+   (ваша программа работала секунду, насчитала, допустим 1432 объекта, и
+   хочет работать ещё секунду… неужто она не найдёт ни одного объекта
+   больше? :) а если найдёт, то, значит, :math:`1432` — неверный ответ),
+   но работать больше нельзя и ничего лучше тут, видимо, не придумаешь.
 
 Как технически делать отсечение по времени? В Borland Pascal (как и в
 любых DOS-программах) есть очень удобная вещь: по адресу 0:$46С (т.е. в
