--- a/backtrack/01_4_add.rst
+++ b/backtrack/01_4_add.rst
@@ -22,7 +22,8 @@
    завершаться сразу, как только нашла решение). Кстати, это далеко не
    всегда бывает неправильно, даже наоборот: в хорошем наборе тестов
    обязательно должны быть большие тесты с ответом «решения не
-   существует». Если же вам требовалось (редкий случай) вывести *все*
+   существует», т.е. какие-то тесты так вы скорее всего пройдете. 
+   Если же вам требовалось (редкий случай) вывести *все*
    решения, то ничего не остаётся, как их все найденные на данный момент
    и вывести, и завершить работу (про вывод *всех* решений см. ниже).
 
@@ -33,59 +34,53 @@
    больше? :) а если найдёт, то, значит, :math:`1432` — неверный ответ),
    но работать больше нельзя и ничего лучше тут, видимо, не придумаешь.
 
-Как технически делать отсечение по времени? В Borland Pascal (как и в
-любых DOS-программах) есть очень удобная вещь: по адресу 0:$46С (т.е. в
-ячейке памяти с абсолютным номером :math:`46\mathrm C_{16}`) лежат
-четыре байта, которые образуют переменную типа :math:`longint`. Её
-значение автоматически (!) увеличивается на единицу примерно 18 раз в
-секунду (за счёт прерывания таймера). Поэтому отсечение по времени можно
-писать так:
+Соответственно, прямо в функции :math:`find` вы можете проверить, сколько времени
+уже работает ваша программа, и если время приближается к ограничению по времени,
+то прервать перебор.
 
-::
+Я не будут писать, как технически в вашем языке программирования делать отсечение по времени,
+потому что в каждом языке это делается по-своему. Разберитесь с этим сами заранее,
+и тщательно потестируйте.
 
-    var t:longint absolute 0:$46c; 
-          {такая конструкция с absolute позволяет указать абсолютный адрес, 
-          где в памяти будет храниться значение переменной}
-        t0:longint;
-        
-    procedure find(...)
-    begin
-    if i>k...
-    end;
-    if t>t0+18 then begin {считая, что ограничение времени 1 секунда}
-       out; {процедура out выводит текущее найденное решение в выходной файл}
-       halt;
-    end;
-    ...
-    end;
+Напишу только несколько замечаний:
 
-    begin {основная программа}
-    t0:=t; {сохраним начальный момент времени в t0}
-    ...
-    end.
+- Можно конечно использовать стандартные функции для получения текущего времени.
+  Только проверьте, дают ли они результат с нужной точностью. Например, если у вас в задаче
+  ограничение времени 1 секунда, то вам нужны функции, дающие время с точностью
+  хотя бы до десятых долей секунды. Тут даже может оказаться, что стандартные функции
+  вам дают например время в миллисекундах, но оно увеличивается скачками, т.е. точность
+  вовсе не 1/1000 секунды.
+- Вместо стандартных функций для текущего времени есть разные функции для получения
+  времени в виде какого-то условного числа, которое можно потом конвертировать, например,
+  в секунды считая с некоторого момента. Под windows, например, есть функция ``getTickCount``,
+  она возвращает количество миллисекунд с момента включения компьютера, правда, увеличивается
+  скачками по 10-16 миллисекунд (на разных компьютерах может быть по-разному). Такие функции
+  могут работать быстрее.
+- Вообще смотреть на системное время — это не очень правильно, потому что реально 
+  тестирующая система смотрит на процессорное время, потраченное вашей программой.
+  Правда, в хороших тестирующих системах нет другой нагрузки на процессор, кроме вашей программы,
+  поэтому процессорное время примерно равно реальному прошедшему времени.
+- Но вообще, системные функции для определения времени могут работать относительно долго
+  и ощутимо замедлять вашу программу. Поэтому *каждый* раз в функции :math:`find` её вызывать — это
+  может быть медленно. Тогда может иметь смысл завести ещё глобальную
+  переменную :math:`nn`, которая будет считать, сколько раз вы вошли в
+  :math:`find`, и только, например, каждый :math:`1000`-ый раз проверять.
+  Типа того:
 
-может, стоит ставить 17, а не 18, на всякий случай, и т.п.
-
-В Windows-программах все не так просто, в частности потому, что нужно
-учитывать процессорное время, потраченное вашей программой. Насколько я
-понимаю, есть функция :math:`getTickCount`, но считается, что она
-подтормаживает и *каждый* раз в функции :math:`find` её вызывать — это
-очень медленно. Тогда может иметь смысл завести ещё глобальную
-переменную :math:`nn`, которая будет считать, сколько раз вы вошли в
-:math:`find`, и только, например, каждый :math:`1024`-ый раз проверять.
-Типа того:
-
-::
+ ::
 
     var t:longint;
-        nn:longint;
-        
+       nn:longint;
+         
     procedure find...
     begin
     if i>k...
     end;
-    if (n and 1023=0)and(gettickcount>t0+1000) then begin
-       ...
+    if (nn=1000) then begin
+        if (gettickcount>t0+1000) then begin
+            // вывести ответ и выйти из программы
+        end;
+        nn:=0;
     end;
     inc(nn);
     ...
@@ -98,31 +93,14 @@
     ...
     end.
 
-(``n0 and 1023``, а не ``n0 mod 1024``, поскольку первое работает
-намного быстрее; по той же причине проверяю каждые 1024, а не каждые
-1000 раз). На само деле, конечно, необходимая частота проверок сильно
-зависит от задачи: иногда может понадобиться и каждый :math:`65\,536`-ой
+(Я тут сбрасываю :math:`nn` каждый раз заново на ноль. Вам может захотеться
+не сбрасывать, а проверять остаток от деления на 1000: ``if (nn mod 1000=0)``.
+Не надо так, деление — относительно долгая операция.)
+
+На само деле, конечно, необходимая частота проверок сильно
+зависит от задачи: иногда может понадобиться и каждый :math:`100\,000`-ый
 раз проверять и т.п.; каждый раз стоит подбирать константу заново, чтобы
 проверки были достаточно частыми, но не слишком частыми.
-
-И ещё, конечно, можно это организовать и по-другому:
-
-::
-
-    if (n=1000) then begin
-       n:=0;
-       if (gettickcount>t0+1000) then begin
-          ...
-       end;
-    end;
-    inc(nn);
-
-т.е. при проверке сбрасывать счётчик в ноль. Теперь взятие остатка по
-модулю не нужно вообще, и можно работать с любым модулем. Но подобная
-проверка все равно не сильно быстрее проверки по модулю «два в степени
-:math:`k`\ », поэтому как вам больше нравится, так и пишите. Первый
-способ позволяет вам также узнать в конце программы, сколько же раз на
-самом деле вызывалась ваша функция.
 
 Перебор двумерного массива
 ^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -159,7 +137,7 @@
 заполнять элементы ответа не в том порядке, в котором приходит в голову,
 а продумать, в каком. Например, пусть наша задача — дано :math:`N^2`
 чисел, проверить, можно ли из них составить магический квадрат (т.е.
-квадрат, в котором сумма каждой строки равна сумме каждого столбца).
+квадрат, в котором суммы всех строк равны и суммы всех столбцов равны).
 Можно, конечно, перебирать так, как написано в предыдущем пункте: т.е.
 выбирать значения для первой строки, потом для второй и т.д…Но можно
 поступить так: в :math:`find(1)` перебираем значение клетки
@@ -167,14 +145,12 @@
 :math:`(1,n)`, :math:`find(n+1)` — :math:`(2,1)` и внимание!
 :math:`find(n+2)` — :math:`(3,1)`, :math:`find(n+3)` — :math:`(4,1)` и
 т.д., потом остаток второй строки, потом остаток второго столбца и т.д.,
-в таблице справа следующего абзаца для :math:`N=5` приведены номера,
+в таблице ниже для :math:`N=5` приведены номера,
 какая клетка какой по счету будет.
-
-r4cm
 
 +-----+------+------+------+------+
 | 1   | 2    | 3    | 4    | 5    |
-+=====+======+======+======+======+
++-----+------+------+------+------+
 | 6   | 10   | 11   | 12   | 13   |
 +-----+------+------+------+------+
 | 7   | 14   | 17   | 18   | 19   |
@@ -195,7 +171,7 @@ r4cm
 последней строке будем проверять суммы столбцов.
 
 А если делать заполнять по очереди строки и столбцы (как описано два
-абзаца назад и показано в примере справа), то отсечения будут: после
+абзаца назад и показано в примере), то отсечения будут: после
 первой строки (на глубине :math:`N`), после первого столбца (на глубине
 :math:`2N-1`, а не :math:`2N` (!)), после второй строки (:math:`3N-2`, а
 не :math:`3N`) и т.д. — т.е. отсечения будут раньше и программа будет
@@ -204,69 +180,3 @@ r4cm
 Аналогичные идеи могут быть и в других задачах, хотя, наверное, весьма
 редко.
 
-Вывод всех оптимальных решений
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-Пусть надо вывести *все* оптимальные решения. Можно, конечно, завести
-большой массив, куда их записывать, но имхо проще поступить так: при
-нахождении очередного оптимального решения просто выводить его сразу в
-файл. Находится ещё одно столь же хорошее решение — его тоже выводим
-туда же. Если же находится решение, которое ещё оптимальнее, чем все,
-что было раньше, то делаем :math:`rewrite` — и все решения, которые были
-выведены раньше, сотрутся. Это все делается в процедуре :math:`check`,
-конечно.
-
-Пример: пусть в задаче про удаление чисел надо было бы вывести *все*
-оптимальные решения. Тогда пишем
-
-::
-
-    procedure check;
-    var i:integer;
-    begin
-    if cur<best then begin
-       best:=cur;
-       rewrite(f);
-       writeln(f,cur);
-    end;
-    if cur=best then  {это выполнится и в случае, когда только что нашлось еще более хорошее решение}
-       for i:=1 to n-2 do write(f,a[i],' ');
-    end;
-
-Т.е. если нашлось решение ещё лучше, то :math:`rewrite` — потираем все
-решения, что были найдены раньше, выводим новую оптимальную сумму (если,
-конечно, требуется по условию), и делаем :math:`best:=cur`.
-
-Далее, если :math:`cur=best`, а это теперь будет и если мы только что
-нашли ещё более хорошее решение (т.е. если только что сделали
-:math:`rewrite` и т.д.), и если мы просто нашли ещё одно столь же
-хорошее решение, что и раньше, то выводим его.
-
-Заметьте, что теперь массив :math:`ans` не нужен.
-
-Не забудьте, что в таком случае уже нельзя делать отсечение по
-нестрогому условию (т.е. :math:`\geq`), а только по строгому
-(:math:`>`).
-
-Кстати, ещё мысль. Аналогично можно поступить и если выводить надо
-только одно решение. Можно его не сохранять в :math:`ans`, а сразу
-выводить
-
-::
-
-    procedure check;
-    var i:integer;
-    begin
-    if cur<best then begin
-       best:=cur;
-       rewrite(f);
-       writeln(f,cur);
-       for i:=1 to n-2 do write(f,a[i],' ');
-       close(f);
-    end;
-    end;
-
-За счёт :math:`close(f)` при отсечении по времени можно будет сразу
-делать :math:`halt` — в каждый момент времени лучшее на данный момент
-времени решение у нас уже лежит в файле, и при отсечении по времени вам
-ничего вообще делать не надо, просто :math:`halt`.
