--- a/dfs/04_1_dfs.rst
+++ b/dfs/04_1_dfs.rst
@@ -1,6 +1,17 @@
 Элементарная реализация и общие замечания
 -----------------------------------------
 
+
+Поиск в глубину — довольно простой алгоритм, даже может быть
+не алгоритм, а идея, но имеющий много применений и вариантов.
+Он применяется для огромного количества разных задач.
+Поэтому вместо того, чтобы как положено сначала сформулировать
+задачу, а потом уже рассказывать алгоритм, я поступлю наоборот:
+я сначала приведу код алгоритма и объясню, что он делает и как работает,
+не объясняя, зачем это надо и как это вам поможет,
+а потом весь оставшийся раздел мы будем обсуждать, как и где
+это применяется.
+
 Реализация
 ^^^^^^^^^^
 
@@ -9,7 +20,7 @@
 рекурсивно запускает себя для всех ещё не посещённых соседей данной
 вершины. Таким образом, у нас в каждый момент про каждую вершину мы
 знаем, были мы в ней уже или ещё нет. При входу в очередную вершину мы
-помечаем, что мы в ней были, и рекурсивно входим во все соседние с ней
+помечаем, что мы в ней были, и рекурсивно идем во все соседние с ней
 вершины, в которых ещё не были. Элементарная реализация поиска в глубину
 тогда получает следующий вид (считаем, что мы храним граф матрицей
 смежности):
@@ -49,32 +60,23 @@
 (обратите внимание, что, конечно, проверка из :math:`was[j]`
 превратилась в :math:`was[i]`).
 
-Смысл такого переноса проверок в общем случае рекурсивных процедур (в
-первую очередь в случае перебора) в том, что 1. если вы вызываете вашу
-процедуру из нескольких мест в коде, то не надо каждый раз дублировать
-проверку, 2. нередко в начале процедуры проверка смотрится как-то
-естественнее (естественнее по максимуму работать с :math:`i`-ой
-вершиной, т.к. именно она является параметром процедуры), и иногда эту
-проверку тут написать проще. С другой стороны, такой перенос приводит к
-дополнительным затратам времени на вызов функции при выполнении
-программы, но по-моему в большинстве случаев эти затраты несущественны
-(время выполнения самой процедуры обычно много больше). Правда, в случае
-поиска в глубину все эти преимущества почти незаметны, т.к.
-:math:`was[i]<>0` — фактически единственная проверка, которую получается
-перенести (совершенно понятно, что проверку :math:`gr[i,j]=1` переносить
-невозможно и вообще бессмысленно), к тому же процедура find обычно
-вызывается максимум из двух мест в коде, поэтому экономии от переноса
-нет, так что здесь это скорее дело вкуса.
-
-Ещё обращу внимание на то, что во втором варианте написано
-:math:`was[i]<>0`, а не :math:`was[i]=1`. Вообще, это как бы ещё пример
-общей идеи, что имхо стоит максимально расширять условия в if’ах. В
-данном случае потом может оказаться, что, зайдя в вершину, в was мы
-сохраним что-нибудь ещё, не обязательно единицу (например, номер
-компоненты связности, или «состояние» вершины в том или ином смысле) —
-но в любом случае ноль будет обозначать непосещённую вершину, а не-ноль
-— посещённую, поэтому :math:`was[i]<>0` будет всегда работать.
-
+.. note::
+   Смысл такого переноса проверок в общем случае рекурсивных процедур (в
+   первую очередь в случае перебора) в том, что 1. если вы вызываете вашу
+   процедуру из нескольких мест в коде, то не надо каждый раз дублировать
+   проверку, 2. нередко в начале процедуры проверка смотрится как-то
+   естественнее (естественнее по максимуму работать с :math:`i`-ой
+   вершиной, т.к. именно она является параметром процедуры), и иногда эту
+   проверку тут написать проще. С другой стороны, такой перенос приводит к
+   дополнительным затратам времени на вызов функции при выполнении
+   программы, но по-моему в большинстве случаев эти затраты несущественны
+   (время выполнения самой процедуры обычно много больше). Правда, в случае
+   поиска в глубину все эти преимущества почти незаметны, т.к.
+   :math:`was[i]<>0` — фактически единственная проверка, которую получается
+   перенести (совершенно понятно, что проверку :math:`gr[i,j]=1` переносить
+   невозможно и вообще бессмысленно), к тому же процедура find обычно
+   вызывается максимум из двух мест в коде, поэтому экономии от переноса
+   нет, так что здесь это скорее дело вкуса.
 
 
 .. _howtocall:
@@ -106,8 +108,6 @@
 И ещё, конечно, нужно не забыть предварительно занулить массив
 :math:`was`.
 
-*(Продолжение на следующей странице)*
-
 Пример работы
 ^^^^^^^^^^^^^
 
@@ -118,73 +118,76 @@
 будет работать следующим образом (отступ строки соответствует уровню
 рекурсии):
 
-r3cm |image|
+.. image:: 04_1_dfs/graph.1.png
 
 | ``find(1)``: запускаем поиск в глубину из вершины 1
-| Помечаем, что побывали в вершине 1
-| Просматриваем соседей вершины 1
-| Нашли соседа: вершину 2
-| В вершине 2 ещё не были
-| ``find(2)``: запускаем поиск в глубину из вершины 2
-| Помечаем, что побывали в вершине 2
-| Просматриваем соседей вершины 2
-| Нашли соседа: вершину 1
-| В вершине 1 уже были, поиск из вершины 1 не запускаем  [1]_
-| Нашли соседа: вершину 3
-| В вершине 3 ещё не были
-| ``find(3)``: запускаем поиск в глубину из вершины 3
-| Помечаем, что побывали в вершине 3
-| Просматриваем соседей вершины 3
-| Нашли соседа: вершину 1
-| В вершине 1 уже были, поиск из вершины 1 не запускаем
-| Нашли соседа: вершину 2
-| В вершине 2 уже были, поиск из вершины 2 не запускаем
-| Соседи вершины 3 закончились, завершаем поиск из вершины 3
-| *(продолжаем просмотр соседей вершины 2)*  [2]_
-| Нашли соседа: вершину 4
-| В вершине 4 ещё не были
-| ``find(4)``: запускаем поиск в глубину из вершины 4
-| Помечаем, что побывали в вершине 4
-| Просматриваем соседей вершины 4
-| Нашли соседа: вершину 1
-| В вершине 1 уже были, поиск из вершины 1 не запускаем
-| Нашли соседа: вершину 2
-| В вершине 2 уже были, поиск из вершины 2 не запускаем
-| Соседи вершины 4 закончились, завершаем поиск из вершины 4
-| *(продолжаем просмотр соседей вершины 2)*
-| Соседи вершины 2 закончились, завершаем поиск из вершины 2
-| *(продолжаем просмотр соседей вершины 1)*
-| … (нашли соседей: вершины 3 и 4, поиск из них не запускаем, для
-  краткости не описываю это подробно)
-| Нашли соседа: вершину 5
-| В вершине 5 ещё не были
-| ``find(5)``: запускаем поиск в глубину из вершины 5
-| Помечаем, что побывали в вершине 5
-| Просматриваем соседей вершины 5
-| Нашли соседа: вершину 1
-| В вершине 1 уже были, поиск из вершины 1 не запускаем
-| Нашли соседа: вершину 6
-| В вершине 6 ещё не были
-| ``find(6)``: запускаем поиск в глубину из вершины 6
-| Помечаем, что побывали в вершине 6
-| Просматриваем соседей вершины 6
-| Нашли соседа: вершину 1
-| В вершине 1 уже были, поиск из вершины 1 не запускаем
-| Нашли соседа: вершину 5
-| В вершине 5 уже были, поиск из вершины 5 не запускаем
-| Соседи вершины 6 закончились, завершаем поиск из вершины 6
-| *(продолжаем просмотр соседей вершины 5)*
-| Соседи вершины 5 закончились, завершаем поиск из вершины 5
-| *(продолжаем просмотр соседей вершины 1)*
-| Нашли соседа: вершину 6
-| В вершине 6 уже были, поиск из вершины 6 не запускаем
-| Соседи вершины 1 закончились, завершаем поиск из вершины 1
+|   Помечаем, что побывали в вершине 1
+|   Просматриваем соседей вершины 1
+|   Нашли соседа: вершину 2
+|   В вершине 2 ещё не были
+|   ``find(2)``: запускаем поиск в глубину из вершины 2
+|     Помечаем, что побывали в вершине 2
+|     Просматриваем соседей вершины 2
+|     Нашли соседа: вершину 1
+|     В вершине 1 уже были, поиск из вершины 1 не запускаем  [1]_
+|     Нашли соседа: вершину 3
+|     В вершине 3 ещё не были
+|     ``find(3)``: запускаем поиск в глубину из вершины 3
+|       Помечаем, что побывали в вершине 3
+|       Просматриваем соседей вершины 3
+|       Нашли соседа: вершину 1
+|       В вершине 1 уже были, поиск из вершины 1 не запускаем
+|       Нашли соседа: вершину 2
+|       В вершине 2 уже были, поиск из вершины 2 не запускаем
+|       Соседи вершины 3 закончились, завершаем поиск из вершины 3
+|     *(продолжаем просмотр соседей вершины 2)*  [2]_
+|     Нашли соседа: вершину 4
+|     В вершине 4 ещё не были
+|     ``find(4)``: запускаем поиск в глубину из вершины 4
+|       Помечаем, что побывали в вершине 4
+|       Просматриваем соседей вершины 4
+|       Нашли соседа: вершину 1
+|       В вершине 1 уже были, поиск из вершины 1 не запускаем
+|       Нашли соседа: вершину 2
+|       В вершине 2 уже были, поиск из вершины 2 не запускаем
+|       Соседи вершины 4 закончились, завершаем поиск из вершины 4
+|     *(продолжаем просмотр соседей вершины 2)*
+|     Соседи вершины 2 закончились, завершаем поиск из вершины 2
+|   *(продолжаем просмотр соседей вершины 1)*
+|   … (нашли соседей: вершины 3 и 4, поиск из них не запускаем, для краткости не описываю это подробно)
+|   Нашли соседа: вершину 5
+|   В вершине 5 ещё не были
+|   ``find(5)``: запускаем поиск в глубину из вершины 5
+|     Помечаем, что побывали в вершине 5
+|     Просматриваем соседей вершины 5
+|     Нашли соседа: вершину 1
+|     В вершине 1 уже были, поиск из вершины 1 не запускаем
+|     Нашли соседа: вершину 6
+|     В вершине 6 ещё не были
+|     ``find(6)``: запускаем поиск в глубину из вершины 6
+|       Помечаем, что побывали в вершине 6
+|       Просматриваем соседей вершины 6
+|       Нашли соседа: вершину 1
+|       В вершине 1 уже были, поиск из вершины 1 не запускаем
+|       Нашли соседа: вершину 5
+|       В вершине 5 уже были, поиск из вершины 5 не запускаем
+|       Соседи вершины 6 закончились, завершаем поиск из вершины 6
+|     *(продолжаем просмотр соседей вершины 5)*
+|     Соседи вершины 5 закончились, завершаем поиск из вершины 5
+|   *(продолжаем просмотр соседей вершины 1)*
+|   Нашли соседа: вершину 6
+|   В вершине 6 уже были, поиск из вершины 6 не запускаем
+|   Соседи вершины 1 закончились, завершаем поиск из вершины 1
 
-На самом деле очень нетривиально придумать один небольшой пример,
+Тут виден, пожалуй, первый полезный факт про поиск в глубину: 
+что поиск в глубину обошел все вершины, достижимые из первой вершины,
+т.е. всю компоненту связности.
+
+(На самом деле очень нетривиально придумать один небольшой пример,
 который бы полностью характеризовал все особенности поиска в глубину.
 Поэтому, если вам что-то во внутреннем механизме работы поиска ещё не
-понятно, порисуйте ещё графы и промоделируйте вручную работу поиска на
-них.
+понятно, или не будет понятно в дальнейшем, то порисуйте ещё графы и промоделируйте вручную работу поиска на
+них.)
 
 Дерево поиска в глубину
 ^^^^^^^^^^^^^^^^^^^^^^^
@@ -202,7 +205,7 @@ r3cm |image|
     Докажите, что действительно получится дерево. Точнее,
     докажите, что в полученном подграфе не будет циклов. Верно ли, что это
     всегда будет дерево, покрывающее все вершины исходного графа? Как это
-    зависит от того, как мы вызываем поиск в глубину (п.
+    зависит от того, как мы вызываем поиск в глубину (раздел
     :ref:`howtocall`)? На самом деле доказательство не очень
     тривиально.
     |
@@ -224,7 +227,7 @@ r3cm |image|
     покрывающее все вершины. Но в случае несвязного графа это будет или
     остовное дерево одной компоненты связности — если запускаем просто
     :math:`find(i)`, — или остовный лес, покрывающий все вершины — если
-    запускаем вторым из перечисленных в п. :ref:`howtocall` способом.
+    запускаем вторым из перечисленных в разделе :ref:`howtocall` способом.
     
     |
 
@@ -234,9 +237,9 @@ r3cm |image|
 
 
 
-r3cm |image|
+.. image:: 04_1_dfs/graph.2.png
 
-На рис. справа приведено дерево для примера из предыдущего пункта.
+На рисунке приведено дерево для примера из предыдущего пункта.
 
 Собственно, поиск в глубину — самый, пожалуй, простой алгоритм
 построения в связном графе *остовного* дерева (т.е. дерева, покрывающего
@@ -277,14 +280,15 @@ r3cm |image|
 Это все относится к случаю, когда граф мы храним матрицей смежности. Но
 можно хранить граф списком смежных вершин или любым другим способом,
 позволяющим перебрать соседей вершины за
-:math:`O(\mbox{\it количество этих соседей})` (например, списком рёбер,
-отсортированным по первой вершине, или вообще не хранить граф, а
+``O(количество этих соседей)`` (например, стандартными списками смежности,
+или даже списком рёбер, отсортированным по первой вершине, 
+или вообще не хранить граф, а
 вычислять соседние вершины «на лету», как, например, в различных задачах
 типа хождения коня по шахматному полю — там мы, конечно, не будем
 хранить ребра вообще, а будем просто перебирать все клетки, на которые
 можно попасть с текущей). Тогда суммарное время работы всех таких
 переборов будет
-:math:`O(\mbox{\it суммарное количество соседей всех вершин})`, т.е.
+``O(суммарное количество соседей всех вершин)``, т.е.
 :math:`O(E)`, а общее время оставшейся работы будет :math:`O(V)`, т.е.
 общее время работы алгоритма будет :math:`O(V+E)`. В большинстве случаев
 :math:`E>V`, поэтому часто говорят, что сложность работы поиска в
@@ -334,7 +338,3 @@ r3cm |image|
    программы сделан соответствующим образом — чтобы не получилось, что
    процедура будет дважды запущена с одним и тем же параметром
 
-.. |image| image:: 04_1_dfs/graph.1.png
-   :width: 3.00000cm
-.. |image| image:: 04_1_dfs/graph.2.png
-   :width: 3.00000cm
