Add notes and better tasks parsing

--- a/backtrack/01_4_add.rst
+++ b/backtrack/01_4_add.rst
@@ -33,6 +33,13 @@
    больше? :) а если найдёт, то, значит, :math:`1432` — неверный ответ),
    но работать больше нельзя и ничего лучше тут, видимо, не придумаешь.
 
+\|\|noteТестирование программы с отсечением по времени на компьютере
+жюри выглядит весьма эффектно, особенно если вы смотрите непосредственно
+в экран тестирующего компьютера, на котором пишется, сколько времени
+осталось: время приближается к TL, и все уже готовы увидеть TL, но нет —
+за доли секунды до TL ваша программа завершается, запускается чекер и вы
+видите WA — что ж, не повезло — или OK — ура, повезло.
+
 Как технически делать отсечение по времени? В Borland Pascal (как и в
 любых DOS-программах) есть очень удобная вещь: по адресу 0:$46С (т.е. в
 ячейке памяти с абсолютным номером :math:`46\mathrm C_{16}`) лежат
