--- a/backtrack/01_4_add.rst
+++ b/backtrack/01_4_add.rst
@@ -38,12 +38,13 @@
 уже работает ваша программа, и если время приближается к ограничению по времени,
 то прервать перебор.
 
-\|\|noteТестирование программы с отсечением по времени на компьютере
-жюри выглядит весьма эффектно, особенно если вы смотрите непосредственно
-в экран тестирующего компьютера, на котором пишется, сколько времени
-осталось: время приближается к TL, и все уже готовы увидеть TL, но нет —
-за доли секунды до TL ваша программа завершается, запускается чекер и вы
-видите WA — что ж, не повезло — или OK — ура, повезло.
+.. note::
+   Тестирование программы с отсечением по времени на компьютере
+   жюри выглядит весьма эффектно, особенно если вы смотрите непосредственно
+   в экран тестирующего компьютера, на котором пишется, сколько времени
+   осталось: время приближается к TL, и все уже готовы увидеть TL, но нет —
+   за доли секунды до TL ваша программа завершается, запускается чекер и вы
+   видите WA — что ж, не повезло — или OK — ура, повезло.
 
 
 Я не будут писать, как технически в вашем языке программирования делать отсечение по времени,
