Better treat mbox and tt

--- a/dfs/04_1_dfs.rst
+++ b/dfs/04_1_dfs.rst
@@ -275,14 +275,14 @@ r3cm |image|
 Это все относится к случаю, когда граф мы храним матрицей смежности. Но
 можно хранить граф списком смежных вершин или любым другим способом,
 позволяющим перебрать соседей вершины за
-:math:`O(\mbox{\it количество этих соседей})` (например, списком рёбер,
+:math:`O({\it количество этих соседей})` (например, списком рёбер,
 отсортированным по первой вершине, или вообще не хранить граф, а
 вычислять соседние вершины «на лету», как, например, в различных задачах
 типа хождения коня по шахматному полю — там мы, конечно, не будем
 хранить ребра вообще, а будем просто перебирать все клетки, на которые
 можно попасть с текущей). Тогда суммарное время работы всех таких
 переборов будет
-:math:`O(\mbox{\it суммарное количество соседей всех вершин})`, т.е.
+:math:`O({\it суммарное количество соседей всех вершин})`, т.е.
 :math:`O(E)`, а общее время оставшейся работы будет :math:`O(V)`, т.е.
 общее время работы алгоритма будет :math:`O(V+E)`. В большинстве случаев
 :math:`E>V`, поэтому часто говорят, что сложность работы поиска в
