Started prroreading complexity

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 связь динамики с перебором
 переход к -1 вместо цикла и в динамике, и в переборе (и про то, что перебирать 2^n вместо бОльшего)
+оптимизировать сложность, а не константу, перенести примеры сложности повыше
